<resources>
    <string name="app_name">EcoTravel</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_start_activities">EcoTravel</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="login_title">Välkommen!</string>
    <string name="username_hint">Användarnamn</string>
    <string name="password_hint">Lösenord</string>
    <string name="register_label"><u>Registrera dig här!</u></string>

    <string name="register_title"><b>Registrera</b></string>
    <string name="email_hint">Email (exempel@domain.com)</string>
    <string name="redo_password_hint">Lösenord igen</string>
    <string name="Name_hint">Namn</string>
    <string name="register_button">Registrera</string>
    <string name="logIn"><u>Redan medlem? Logga in här</u></string>

    <string name="search_hint">Företag eller person</string>

    <string name="profile_name"> Namn: </string>
    <string name="profile_email"> Email: </string>
    <string name="profile_age"> år </string>
    <string name="profile_position"> Plats: </string>

    <string name="persons">Personer</string>
    <string name="companies">Företag</string>

    <string name="edit_profile_button">Spara ändringar</string>
    <string name="profil_title"><b>Profil</b></string>

    <string name="add_company_text">Här kan du registrera ditt företag så att du och dina anställda kan spara koldioxid tillsammans!</string>

    <string name="current_pass_hint">Nuvarande lösenord</string>
    <string name="new_pass_hint">Nytt lösenord</string>
    <string name="new_pass_hint2">Nytt lösenord igen</string>

    <string name="medal_co2_tot">Spara tillsammans!</string>
    <string name="medal_people">Alla bör åka kollektivt!</string>

    <string-array name="drawer_array">
        <item>Min profil</item>
        <item>Mitt företag</item>
        <item>Topplistor</item>
        <item>Medaljer</item>
        <item>Företagsinställningar</item>
        <item>Redigera profil</item>
        <item>Log out</item>
        <item>Diagram</item>

    </string-array>

    <string-array name="global_medals">
        <item>Spara tillsammans!</item>
        <item>Alla bör åka kollektivt!</item>
        <item>Gilla Jolle!</item>
    </string-array>

    <string-array name="anders_array">
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>
        <item>Anders Andersson</item>

    </string-array>

    <string-array name="test_array">
        <item>Object 1</item>
        <item>Object 2</item>
        <item>Object 3</item>
        <item>Object 4</item>
        <item>Object 5</item>
        <item>Object 1</item>
        <item>Object 2</item>
        <item>Object 3</item>
        <item>Object 4</item>
        <item>Object 5</item>
        <item>Object 1</item>
        <item>Object 2</item>
        <item>Object 3</item>
        <item>Object 4</item>
        <item>Object 5</item>
        <item>Object 1</item>
        <item>Object 2</item>
        <item>Object 3</item>
        <item>Object 4</item>
        <item>Object 5</item>

    </string-array>


    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
