<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/clear_white"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="50dp"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text=""
            android:textColor="@color/error_text_red"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:id="@+id/input_error" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/Name_hint"
            android:inputType="textPersonName"
            android:id="@+id/name"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:id="@+id/username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text=""
            android:textColor="@color/error_text_red"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:id="@+id/password_error" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/first_password"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/redo_password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/second_password"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:id="@+id/button_register" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>