<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/big_image"
            android:layout_height="@dimen/big_image"
            android:id="@+id/edit_profile_pic"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:layout_width="@dimen/centered_field_size"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:id="@+id/nameField"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="@dimen/centered_field_size"
            android:layout_height="wrap_content"
            android:id="@+id/current_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/current_pass_hint"
            />


        <EditText
            android:layout_width="@dimen/centered_field_size"
            android:layout_height="wrap_content"
            android:id="@+id/password1"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/new_pass_hint"
            />

        <EditText
            android:layout_width="@dimen/centered_field_size"
            android:layout_height="wrap_content"
            android:id="@+id/password2"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/new_pass_hint2"
            />

        <FrameLayout
            android:layout_width="@dimen/centered_field_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/nice_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_button"
                android:id="@+id/save_button"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:textSize="20dp"
                 />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>