<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/clear_white"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="50dp"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/error_text_red"
            android:text=""
            android:id="@+id/login_error"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email_hint"
            android:ems="10"
            android:id="@+id/emailField" />

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:ems="10"
            android:id="@+id/passwordField"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="right"
            >
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go!"
                android:id="@+id/loginButton"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"></FrameLayout>

    </LinearLayout>

</LinearLayout>