<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_column="1"
        android:layout_gravity="left"
        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/profile_pic"
            android:src="@drawable/empty_profile"
            />


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textSize="20dp"
                    android:layout_column="1"
                    android:gravity="right"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Large Text"
                    android:textSize="20dp"
                    android:id="@+id/nameView"
                    android:layout_column="3" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_Username"
                    android:textSize="20dp"
                    android:layout_column="1"
                    android:gravity="right"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp"
                    android:text="Large Text"
                    android:id="@+id/usernameView"
                    android:layout_column="3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_age"
                    android:textSize="20dp"
                    android:layout_column="1"
                    android:gravity="right"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Large Text"
                    android:textSize="20dp"
                    android:id="@+id/ageView"
                    android:layout_column="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_position"
                    android:textSize="20dp"
                    android:layout_column="1"
                    android:gravity="right"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="20dp"
                    android:text="Large Text"
                    android:id="@+id/positionView"
                    android:layout_column="3" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>